[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/menu/player_result.gd" type="Script" id=1]

[node name="player_result" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="v_box_container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="v_box_container"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 512.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.847059, 0, 1 )
text = "WINNER"
align = 1

[node name="panel" type="Panel" parent="v_box_container"]
margin_top = 18.0
margin_right = 512.0
margin_bottom = 288.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="v_box_container" type="VBoxContainer" parent="v_box_container/panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="v_box_container/panel/v_box_container"]
margin_right = 512.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.447059, 0.470588, 0.760784, 1 )
text = "NAME"
align = 1

[node name="score" type="Label" parent="v_box_container/panel/v_box_container"]
margin_top = 18.0
margin_right = 512.0
margin_bottom = 32.0
text = "0"
align = 1

[node name="grid_container" type="GridContainer" parent="v_box_container/panel/v_box_container"]
margin_top = 36.0
margin_right = 512.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="tween" type="Tween" parent="."]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="tween_step" from="tween" to="." method="_on_tween_tween_step"]
